online-boutique/cluster1-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: adservice
  namespace: online-boutique
spec:
  ports:
  - name: grpc
    port: 9555
    protocol: TCP
    targetPort: 9555
  selector:
    app: adservice
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: checkoutservice
  namespace: online-boutique
spec:
  ports:
  - name: grpc
    port: 5050
    protocol: TCP
    targetPort: 5050
  selector:
    app: checkoutservice
  type: ClusterIP
---

apiVersion: v1
kind: Service
metadata:
  name: currencyservice
  namespace: online-boutique
spec:
  ports:
  - name: grpc
    port: 7000
    protocol: TCP
    targetPort: 7000
  selector:
    app: currencyservice
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: emailservice
  namespace: online-boutique
spec:
  ports:
  - name: grpc
    port: 5000
    protocol: TCP
    targetPort: 8080
  selector:
    app: emailservice
  type: ClusterIP
---

apiVersion: v1
kind: Service
metadata:
  name: paymentservice
  namespace: online-boutique
spec:
  ports:
  - name: grpc
    port: 50051
    protocol: TCP
    targetPort: 50051
  selector:
    app: paymentservice
  type: ClusterIP
---
