online-boutique/cluster2-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: cartservice
  namespace: online-boutique
spec:
  ports:
  - name: grpc
    port: 7070
    protocol: TCP
    targetPort: 7070
  selector:
    app: cartservice
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: online-boutique
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: frontend
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-external
  namespace: online-boutique
spec:
  ports:
  - name: http
    nodePort: 31919
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: frontend
  type: LoadBalancer
---
apiVersion: v1
kind: Service
metadata:
  name: productcatalogservice
  namespace: online-boutique
spec:
  ports:
  - name: grpc
    port: 3550
    protocol: TCP
    targetPort: 3550
  selector:
    app: productcatalogservice
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: recommendationservice
  namespace: online-boutique
spec:
  ports:
  - name: grpc
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: recommendationservice
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: redis-cart
  namespace: online-boutique
spec:
  ports:
  - name: redis
    port: 6379
    protocol: TCP
    targetPort: 6379
  selector:
    app: redis-cart
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: shippingservice
  namespace: online-boutique
spec:
  ports:
  - name: grpc
    port: 50051
    protocol: TCP
    targetPort: 50051
  selector:
    app: shippingservice
  type: ClusterIP
---
